# MoleDymCode

./: .gitignore  CMakeLists.txt  README.md  main.cpp  verlet.cpp  verlet.h
AALatex/: ccmain.tex
AALatex/Literatur/: Lit.bib
AALatex/Tex/: conclusion.tex  implementation.tex  includePackages.tex  introduction.tex  methods.tex  milestone4.tex  milestone5.tex  milestone6.tex  milestone7.tex  results.tex
AData/: NeighborTrajectory0000Original.xyz  NeighborTrajectory0000StepAdded000001.xyz  Trajectory0012.xyz  energy.txt  energy0.01.txt  energy0.02.txt  energy0.03.txt  energy0.05.txt  energy0.1.txt  energy0.8.txt  kineticEnergy.txt  potentialEnergy.txt  temperatur.txt
AData/Clusters/: cluster0.xyz  cluster1.xyz  cluster10.xyz  cluster11.xyz  cluster12.xyz  cluster13.xyz  cluster14.xyz  cluster3.xyz  cluster4.xyz  cluster5.xyz  cluster6.xyz  cluster7.xyz  cluster8.xyz  cluster9.xyz  energy1.txt  energy10.txt  (+51 more)
AJupyter/: M5DataGrapper.ipynb  energyDirivative.ipynb  energyVisulizer.ipynb  m4DataGrapper.ipynb  m7VariableClusterSizeRunner.ipynb  milestone7EnergyTemperatur.ipynb  shortEnergyDiv.ipynb  simStateMile4.ovito
Headerfiles/: atoms.h  berendsenThermostat.h  clusterGenerator.h  embeddedAtomPotential.h  helperfunctions.h  lenardJonesDirectionSummation.h  milestones.h  neighbors.h  types.h  verlet.h  xyz.h
Sourcefiles/: berendsenThermostat.cpp  clusterGenerator.cpp  embeddedAtomPotential.cpp  helperfunctions.cpp  lenardJonesDirectionSummation.cpp  milestones.cpp  neighbors.cpp  verlet.cpp  xyz.cpp
tests/: CMakeLists.txt  testEmbeddedAtomPotential.cpp  testHelperfunctions.cpp  testLenardJonesDirectionSummation.cpp  testMilstone.cpp  testNeighbors.cpp  testThermostat.cpp  testVerlet.cpp  test_hello_world.cpp
